<resources>
    <string name="app_name">RecipeMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sharing">שתף</string>
    <string name="title_activity_ingredient">IngredientActiv</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">ראשי</string>
    <string name="title_section2">מצא מתכונים</string>
    <string name="title_section3">מתכונים</string>
    <string name="title_section4">מועדפים</string>
    <string name="title_section5">הגדרות</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title1">מוצרי חלב</string>
    <string name="title2">שמנים</string>
    <string name="title3">מתוקים</string>
    <string name="title4">קטניות ודגנים</string>
    <string name="title5">פירות וירקות</string>
    <string name="title6">חלבונים</string>
    <string name="title7">אחרים</string>


    <string name="title8">קינוחים</string>
    <string name="title9">בשרים</string>
    <string name="title10">ארוחות בוקר</string>
    <string name="title11">ארוחות בריאות</string>
    <string name="title12">סלטים</string>
    <string name="title13">מרקים</string>
    <string name="title14">מנות עיקריות</string>
    <string name="title15">מנות ראשונות</string>
    <string name="title16">פסטות</string>
    <string name="title17">דגים</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_recpie_deatils">RecpieDeatilsActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
