<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_section1"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_event"
            android:title="@string/title_section2"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset"
            android:title="@string/title_section3"/>
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum"
            android:title="@string/title_section4"/>

        <item
            android:id="@+id/nav_discussion1"
            android:icon="@drawable/ic_forum"
            android:title="@string/title_section5"/>
    </group>

    <!--<item android:title="Sub items">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_dashboard"-->
                <!--android:title="Sub item 1"/>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_forum"-->
                <!--android:title="Sub item 2"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
